--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body {
 
 }
 
-body.page-doc {
-    background-image: url("img/rockconcert6.jpg");
+body.page-doc { background-color: ;
+    background-image: url("img/grungetexture.jpg");
     background-repeat: no-repeat; 
     background-size: cover;
     }
